@startuml
'https://plantuml.com/class-diagram
title Class diagram for a buildable square
abstract class Square {
+<<create>> Square(squareName: String)
color: String
groupSize: int
+void setGroup(color:String, groupSize: int)
+{abstract} void landOn(Player currentPlayer)

}

abstract class DeedSquare {
+<<create>> DeedSquare(deedName: String, deedPrice: int, rent: int[])
rent: int[];
deedPrice: int;

buying: String;
startAuction: Bool = false;
sellDeed: Bool = true;
ownsGroup: Bool = false;

userInput: Scanner;

+hasDeed():boolean
+sellDeed():void
+boolean auctionIsStarting(): startAuction;
#void buyingLot()
#void lotIsOwned()


}

class DeedSquare_Buildable {
+<<create>> DeedSquare_Buildable(deedName: String, deedPrice: int, rent: int[], buildingPrice: int)
buildingPrice: int;

}

abstract class Deed {
+<<create>> Deed(deedName: String, deedPrice: int, rent: int[])
owner: Player;
rent: int[];
int deedPrice;
String deedName;
String color;
int groupSize;

}
class Deed_Buildable {
+<<create>> Deed_Buildable(deedName: String, deedPrice: int, rent: int[], buildingPrice: int)
buildingPrice: int;
int houseCount;
boolean hasHotel = false;

}

Square <|-down- DeedSquare

DeedSquare <|-down- DeedSquare_Buildable

Deed <|-up- Deed_Buildable

DeedSquare_Buildable -[dashed]right-> Deed

@enduml